tests/neg-custom-args/captures/eta.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/eta.scala:4:9 --------------------------------------------
4 |         g  // error
  |         ^
  |         Found:    () ->? A
  |         Required: () -> Proc^{f}
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/eta.scala:6:20 ----------------------------------------------------------------
6 |         bar( () => f )  // error
  |                    ^
  |                    (f : Proc^) cannot be referenced here; it is not included in the allowed capture set {}
  |                    of an enclosing function literal with expected type () -> box () ->? Unit
